2014-10-31 huku <huku@grhack.net>

    * Added "NOTES.md".


2014-10-21 huku <huku@grhack.net>

    * Added missing `local' directives in "sex.sh" to avoid trashing the global
      namespace (spotted by slasher@grhack.net).
